[gd_scene load_steps=9 format=2]

[ext_resource path="res://abstracedural/Rooms/Corridor_Room.gd" type="Script" id=1]
[ext_resource path="res://Placeholder_White/Placeholder_White.tscn" type="PackedScene" id=2]
[ext_resource path="res://abstracedural/Exit.gd" type="Script" id=3]

[sub_resource type="Resource" id=2]
script = ExtResource( 3 )
id = 0
direction = 2
position = Vector2( 0, 0 )

[sub_resource type="Resource" id=3]
script = ExtResource( 3 )
id = 1
direction = 1
position = Vector2( 0, 0 )

[sub_resource type="Resource" id=4]
script = ExtResource( 3 )
id = 2
direction = 1
position = Vector2( 1, 0 )

[sub_resource type="Resource" id=5]
script = ExtResource( 3 )
id = 3
direction = 3
position = Vector2( 1, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Corridor_Room" type="Node2D"]
script = ExtResource( 1 )
room_positions = [ Vector2( 0, 0 ), Vector2( 1, 0 ) ]
exits = [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ]

[node name="Left" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 65537, 0, 0, 65538, 0, 0, 65541, 0, 0, 65542, 0, 0, 131072, 0, 0, 131073, 0, 0, 131078, 0, 0, 131079, 0, 0, 327680, 0, 0, 327681, 0, 0, 327686, 0, 0, 327687, 0, 0, 393217, 0, 0, 393218, 0, 0, 393221, 0, 0, 393222, 0, 0, 458754, 0, 0, 458757, 0, 0 )

[node name="0" parent="Left" instance=ExtResource( 2 )]
tile_data = PoolIntArray( 196608, 0, 0, 262144, 0, 0 )

[node name="1" parent="Left" instance=ExtResource( 2 )]
tile_data = PoolIntArray( 458755, 0, 0, 458756, 0, 0 )

[node name="Right" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 65545, 0, 0, 65546, 0, 0, 65549, 0, 0, 65550, 0, 0, 131080, 0, 0, 131081, 0, 0, 131086, 0, 0, 131087, 0, 0, 327688, 0, 0, 327689, 0, 0, 327694, 0, 0, 327695, 0, 0, 393225, 0, 0, 393226, 0, 0, 393229, 0, 0, 393230, 0, 0, 458762, 0, 0, 458765, 0, 0 )

[node name="2" parent="Right" instance=ExtResource( 2 )]
tile_data = PoolIntArray( 458763, 0, 0, 458764, 0, 0 )

[node name="3" parent="Right" instance=ExtResource( 2 )]
tile_data = PoolIntArray( 196623, 0, 0, 262159, 0, 0 )

[node name="Division" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 196615, 0, 0, 196616, 0, 0, 262151, 0, 0, 262152, 0, 0 )

[node name="First_Down_Exit" type="Area2D" parent="."]
position = Vector2( 128, 304 )
monitorable = false
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="First_Down_Exit"]
shape = SubResource( 1 )

[node name="Second_Down_Exit" type="Area2D" parent="."]
position = Vector2( 384, 312 )
monitorable = false
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Second_Down_Exit"]
shape = SubResource( 1 )

[node name="Left_Exit" type="Area2D" parent="."]
position = Vector2( -48, 128 )
monitorable = false
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Left_Exit"]
shape = SubResource( 1 )

[node name="Right_Exit" type="Area2D" parent="."]
position = Vector2( 560, 128 )
monitorable = false
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Right_Exit"]
shape = SubResource( 1 )
[connection signal="body_entered" from="First_Down_Exit" to="." method="_on_First_Down_Exit_body_entered"]
[connection signal="body_entered" from="Second_Down_Exit" to="." method="_on_Second_Down_Exit_body_entered"]
[connection signal="body_entered" from="Left_Exit" to="." method="_on_Left_Exit_entered"]
[connection signal="body_entered" from="Right_Exit" to="." method="_on_Right_Exit_entered"]
